
###### Example setup and installation
MACRO(SETUP_EXAMPLE targetname)

IF (USE_SOLUTION_FOLDERS)
      SET_TARGET_PROPERTIES(${targetname} PROPERTIES FOLDER "Examples" )
ENDIF(USE_SOLUTION_FOLDERS)

# In win32 put the .dll in the bin folder
	INSTALL(TARGETS ${targetname}
		RUNTIME DESTINATION ${${ROOT_PROJECT_NAME}_INSTALL_BIN_DIR} CONFIGURATIONS Release RelWithDebInfo MinSizeRel COMPONENT Examples
		LIBRARY DESTINATION ${${ROOT_PROJECT_NAME}_INSTALL_LIB_DIR} CONFIGURATIONS Release RelWithDebInfo MinSizeRel COMPONENT Examples
		ARCHIVE DESTINATION ${${ROOT_PROJECT_NAME}_INSTALL_LIB_DIR} CONFIGURATIONS Release RelWithDebInfo MinSizeRel COMPONENT Examples
		)
	INSTALL(TARGETS ${targetname}
		RUNTIME DESTINATION ${${ROOT_PROJECT_NAME}_INSTALL_BIN_DEBUG_DIR} CONFIGURATIONS "Debug" COMPONENT Examples
		LIBRARY DESTINATION ${${ROOT_PROJECT_NAME}_INSTALL_LIB_DEBUG_DIR} CONFIGURATIONS "Debug" COMPONENT Examples
		ARCHIVE DESTINATION ${${ROOT_PROJECT_NAME}_INSTALL_LIB_DEBUG_DIR} CONFIGURATIONS "Debug" COMPONENT Examples
		) 

ENDMACRO(SETUP_EXAMPLE targetname)

ADD_DEFINITIONS("-DWINVER=0x500")
ADD_SUBDIRECTORY(mfcsample)
ADD_SUBDIRECTORY(01_Geometry)
ADD_SUBDIRECTORY(02_Modeling)
ADD_SUBDIRECTORY(03_Viewer2d)
ADD_SUBDIRECTORY(04_Viewer3d)
ADD_SUBDIRECTORY(05_ImportExport)
ADD_SUBDIRECTORY(06_Ocaf)
ADD_SUBDIRECTORY(07_Triangulation)
ADD_SUBDIRECTORY(08_HLR)
ADD_SUBDIRECTORY(09_Animation)
ADD_SUBDIRECTORY(10_Convert)
