PROJECT(Modeling)

SET(CMAKE_MFC_FLAG 2) 
FILE(GLOB SRCS src/*.cpp)
FILE(GLOB HEADERS src/*.h)
FILE(GLOB RES res/*.rc)
SET(PCH src/StdAfx.h src/StdAfx.cpp)

INCLUDE_DIRECTORIES(src)
INCLUDE_DIRECTORIES(../Common/)

ADD_EXECUTABLE(Modeling WIN32 ${SRCS} ${HEADERS} ${PCH} ${RES}) 
TARGET_LINK_LIBRARIES(Modeling mfcsample)
SETUP_EXAMPLE(Modeling)
