PROJECT(HLR)

SET(CMAKE_MFC_FLAG 2) 
FILE(GLOB SRCS src/*.cpp)
FILE(GLOB PROP_SRCS src/Properties/*.cpp)
FILE(GLOB HEADERS src/*.h)
FILE(GLOB RES res/*.rc)
SET(PCH src/StdAfx.h src/StdAfx.cpp)

INCLUDE_DIRECTORIES(res)
INCLUDE_DIRECTORIES(src)
INCLUDE_DIRECTORIES(src/Properties)
INCLUDE_DIRECTORIES(../Common/)

ADD_EXECUTABLE(HLR WIN32 ${SRCS} ${PROP_SRCS} ${HEADERS} ${PCH} ${RES}) 
TARGET_LINK_LIBRARIES(HLR mfcsample)
SETUP_EXAMPLE(HLR)