PROJECT(mfcsample)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(../Common/)
ADD_DEFINITIONS(-D_AFXDLL)
ADD_DEFINITIONS(-D_AFXEXT)
SET(CMAKE_MFC_FLAG 2) 
SET(SOURCES src/mfcsample.cpp)
FILE(GLOB COMMON_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ../Common/*.c*)
LIST(REMOVE_ITEM COMMON_SRCS ../Common/OCC_ChildFrame.cpp)
FILE(GLOB COMMON_HDRS ../Common/*.h)
FILE(GLOB IMPEXP_SRCS ../Common/ImportExport/*.c*)
FILE(GLOB IMPEXP_HDRS ../Common/ImportExport/*.h)
FILE(GLOB PRIMITIVE_SRCS ../Common/Primitive/*.c*)
FILE(GLOB PRIMITIVE_HDRS ../Common/Primitive/*.h)
FILE(GLOB SESSION_SRCS ../Common/ISession2d/*.c*)
FILE(GLOB SESSION_HDRS ../Common/ISession2d/*.h)
FILE(GLOB RES_SRCS ../Common/Resource2d/*.c*)
FILE(GLOB RES_HDRS ../Common/Resource2d/*.h)
SET(PCH src/StdAfx.cpp)

ADD_LIBRARY(mfcsample SHARED ${SRCS} ${PCH} ${COMMON_SRCS} ${COMMON_HDRS} ${IMPEXP_SRCS} ${IMPEXP_HDRS} 
						${PRIMITIVE_SRCS} ${PRIMITIVE_HDRS} ${SESSION_SRCS} ${SESSION_HDRS} ${RES_SRCS} ${RES_HDRS})
TARGET_LINK_LIBRARIES (mfcsample TKVRML TKSTL TKBRep TKIGES TKShHealing TKSTEP TKXSBase TKShapeSchema FWOSPlugin PTKernel TKBool TKCAF TKCDF TKernel TKFeat TKFillet TKG2d TKG3d TKGeomAlgo TKGeomBase TKHLR TKMath TKOffset TKPCAF TKPrim TKPShape TKService TKTopAlgo TKMesh TKV2d TKV3d)
SETUP_EXAMPLE(mfcsample)